# wiki-semantic-crawler

./: README.md  crawler.py  main.py  pyproject.toml
