[project]
name = "WikiSemanticCrawler"
version = "0.1.0"
description = "An autonomous Wikipedia navigation agent using Weighted A* Search and Transformer-based Sentence Embeddings to solve the Wiki Game."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
]
